<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".main.AddShiftActivity">

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spDayOfTheWeek"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="34dp" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnChangeStartingTime"
        android:id="@+id/btnChangeStartingTime"
        android:onClick="changeStartingTime"
        android:layout_marginTop="27dp"
        android:layout_below="@+id/spDayOfTheWeek"
        android:layout_alignRight="@+id/textView4"
        android:layout_alignEnd="@+id/textView4" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/tvNotDefined"
        android:id="@+id/tvStartingTime"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/btnChangeStartingTime"
        android:layout_alignRight="@+id/textView4" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnChangeEndingTime"
        android:id="@+id/btnChangeEndingTime"
        android:onClick="changeEndingTime"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/tvEndingTime"
        android:layout_alignEnd="@+id/tvEndingTime" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/tvNotDefined"
        android:id="@+id/tvEndingTime"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/btnChangeEndingTime"
        android:layout_alignRight="@+id/textView4" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnSave"
        android:id="@+id/btnSave"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/btnChangeStartingTime"
        android:layout_alignStart="@+id/btnChangeStartingTime"
        android:layout_marginBottom="71dp"
        android:layout_alignRight="@+id/tvEndingTime"
        android:layout_alignEnd="@+id/tvEndingTime"
        android:onClick="save" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/tvDayOfTheWeek"
        android:id="@+id/textView4"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
